Fix 404 Page cannot load Style

--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variation UI | Introduceing your new phone</title>
-    <link rel="stylesheet" type="text/css" href="./style/main.css">
-    <link rel="stylesheet" type="text/css" href="./style/menu.css">
-    <link rel="stylesheet" type="text/css" href="./style/univar.css">
-    <link rel="stylesheet" type="text/css" href="./style/downloads.css">
-    <link rel="icon" href="./sources/icon.png">
+    <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/website-new/style/main.css">
+    <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/website-new/style/menu.css">
+    <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/website-new/style/univar.css">
+    <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/website-new/style/downloads.css">
+    <link rel="icon" href="https://variation-ui.github.io/website-new/sources/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
