--- a/downloads.html
+++ b/downloads.html
@@ -70,7 +70,7 @@
                         </path>
                     </svg>
                 </div>
-                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
+                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'" target="_blank">LEGAL
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -89,7 +89,7 @@
                     </svg>
                 </div>
                 <div id="opensource" class="menuli"
-                    onclick="javascript:window.location.href='https://github.com/variation-ui'">
+                    onclick="javascript:window.location.href='https://github.com/variation-ui'" target="_blank">
                     OPENSOURCE
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
@@ -101,7 +101,7 @@
                 </div>
                 <!-- <div class="menuHoverBar"></div> -->
             </div>
-            <div onclick="javascript:window.location.href='./downloads.html'">
+            <div onclick="javascript:window.location.href='./downloads.html'" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
                     height="18" viewBox="-1 -1 20 20" fill="none">
                     <path
@@ -126,7 +126,7 @@
                 <div class="stepNum">1</div>
             </div>
             <div id="brands" class="content">
-                <li class="brandBtn" onclick="javascript:window.location.href='./downloads/google'">
+                <li class="brandBtn" onclick="javascript:window.location.href='./downloads/google'" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48"
                         height="48" viewBox="0 0 48 48" fill="none">
                         <path stroke="rgba(255, 255, 255, 1)" stroke-width="2" stroke-linejoin="round"
