--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
                     NEW PHONE.
                 </h1>
                 <p>
+                    A free and open-source operating system for various devices, based on the lineage OS.<br>
+                    <br>
                     pick your device brand to get started.
                 </p>
             </span>
@@ -194,6 +196,9 @@
                 <p>OnePlus</p>
             </li>
         </div>
+        <footer class="content">
+            <iframe src="./footer.html" width="100%" height="256"></iframe>
+        </footer>
     </div>
 </body>
 
