--- a/legal.html
+++ b/legal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variation UI | Introduceing your new phone</title>
+    <title>Legal - Variation UI</title>
     <link rel="stylesheet" type="text/css" href="./style/main.css">
     <link rel="stylesheet" type="text/css" href="./style/menu.css">
     <link rel="stylesheet" type="text/css" href="./style/univar.css">
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <style>
+        #legal {
+            border-bottom: solid 1px rgb(104, 171, 247);
+            color: #FFFFFF;
+        }
+    </style>
     <div id="content">
         <header>
             <input type="checkbox" id="toggler">
@@ -211,5 +217,8 @@ We will update this privacy policy as needed so that it is current, accurate, an
                     new Editor($("text-input"), $("mdBox"));
                 </script>
         </div>
+        <footer class="content">
+            <iframe src="./footer.html" width="100%" height="256"></iframe>
+        </footer>
     </div>
 </body>
