Edit Index title & Footer And Header

--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,7 @@
                     fill-rule="evenodd" fill="#FFFFFF">
                 </path>
             </svg>
-            <p>A free and open-source operating system for various devices, based on the lineage OS.</p>
+            <p>Variation UI is a distinctive system of interface design, functional design, and performance features that showcases an outstanding user interface, excellent functional design, and seamless fluidity while being power-efficient. Based on CodeLinaro.</p>
         </div>
         <div menu>
             <p></p>
