--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                     </path>
                 </svg>
             </label>
-            <div onclick="javascript:window.location.href='./'">
+            <div id="logo" onclick="javascript:window.location.href='./'">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
                     height="18" viewBox="0 0 18 18" fill="none">
-                    <path
+                    <path id="logoTop"
                         d="M13.6428 0.333383C13.7685 0.194859 13.9936 0.192146 14.1104 0.337642L16.2745 3.0341C16.3797 3.1651 16.3558 3.35748 16.2217 3.45934L9.82514 8.38851C9.34669 8.75207 8.69811 8.79363 8.17915 8.494L0.533228 4.03309C0.474333 3.99909 0.499036 3.90438 0.565757 3.91767C6.56351 5.20131 9.65168 4.0579 13.6428 0.333383Z"
                         fill-rule="evenodd" fill="#FFFFFF">
                     </path>
-                    <path
+                    <path id="logoBottom"
                         d="M4.27684 17.6665C4.15114 17.8051 3.92604 17.8078 3.80925 17.6623L1.64512 14.9659C1.53998 14.8349 1.56387 14.6425 1.69793 14.5406L8.09451 9.61144C8.57296 9.24788 9.22154 9.20632 9.74051 9.50595L17.4668 13.9669C17.5257 14.0009 17.5009 14.0956 17.4343 14.0823C11.4364 12.7986 8.26798 13.942 4.27684 17.6665Z"
                         fill-rule="evenodd" fill="#FFFFFF">
                     </path>
@@ -86,6 +86,11 @@
                             fill-rule="evenodd" fill="#FFFFFF">
                         </path>
                     </svg>
+                    <div id="hoverMenuBox">
+                        <li>Font Design</li>
+                        <li>UI Design</li>
+                        <li>Sound Design</li>
+                    </div>
                 </div>
                 <div id="opensource" class="menuli"
                     onclick="javascript:window.location.href='https://github.com/variation-ui'">
@@ -114,12 +119,13 @@
             <span class="h1Box">
                 <h1>
                     <div class="logo"></div>
-                    INTRODUCEING<br>
-                    YOUR<br>
-                    NEW PHONE.
+                    Make your<br>
+                    experience better,<br>
+                    Make your<br>
+                    able to do more.
                 </h1>
                 <p>
-                    A free and open-source operating system for various devices, based on the lineage OS.<br>
+                    Seamless fluidity, remarkable efficiency, and easy usability. Runs smoothly, tasks done fast. Discover the more great experience with the Variation UI.<br>
                     <br>
                     pick your device brand to get started.
                 </p>
