--- a/404.html
+++ b/404.html
@@ -44,11 +44,11 @@
                     height="18" viewBox="0 0 18 18" fill="none">
                     <path id="logoTop"
                         d="M13.6428 0.333383C13.7685 0.194859 13.9936 0.192146 14.1104 0.337642L16.2745 3.0341C16.3797 3.1651 16.3558 3.35748 16.2217 3.45934L9.82514 8.38851C9.34669 8.75207 8.69811 8.79363 8.17915 8.494L0.533228 4.03309C0.474333 3.99909 0.499036 3.90438 0.565757 3.91767C6.56351 5.20131 9.65168 4.0579 13.6428 0.333383Z"
-                        fill-rule="evenodd" fill="#FFFFFF">
+                        fill-rule="evenodd">
                     </path>
                     <path id="logoBottom"
                         d="M4.27684 17.6665C4.15114 17.8051 3.92604 17.8078 3.80925 17.6623L1.64512 14.9659C1.53998 14.8349 1.56387 14.6425 1.69793 14.5406L8.09451 9.61144C8.57296 9.24788 9.22154 9.20632 9.74051 9.50595L17.4668 13.9669C17.5257 14.0009 17.5009 14.0956 17.4343 14.0823C11.4364 12.7986 8.26798 13.942 4.27684 17.6665Z"
-                        fill-rule="evenodd" fill="#FFFFFF">
+                        fill-rule="evenodd">
                     </path>
                 </svg>
             </div>
@@ -58,7 +58,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                 </div>
@@ -67,7 +67,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                 </div>
@@ -76,7 +76,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                 </div>
@@ -85,7 +85,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                 </div>
@@ -94,7 +94,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                     <div id="hoverMenuBox">
@@ -110,7 +110,7 @@
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
                             d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd" fill="#FFFFFF">
+                            fill-rule="evenodd">
                         </path>
                     </svg>
                 </div>
@@ -119,9 +119,9 @@
             <div onclick="javascript:window.location.href='./downloads.html'">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
                     height="18" viewBox="-1 -1 20 20" fill="none">
-                    <path
+                    <path id="downloadBtn"
                         d="M8.20735 14.5866L8.20735 0.875L9.79175 0.875L9.79175 14.5874L15.598 9.50684C15.7423 9.38069 15.9615 9.3953 16.0879 9.53959L16.6739 10.2093C16.8003 10.3536 16.7857 10.5731 16.6413 10.6993L9.52169 16.929C9.223 17.1903 8.77701 17.1903 8.47834 16.929L1.35869 10.6993C1.21437 10.573 1.19975 10.3537 1.32603 10.2094L1.91208 9.53959C2.03835 9.39529 2.25769 9.38066 2.40203 9.50693L8.20735 14.5866Z"
-                        fill-rule="evenodd" fill="#FFFFFF">
+                        fill-rule="evenodd">
                     </path>
                 </svg>
             </div>
@@ -136,18 +136,20 @@
                         document.write(adv);
                     </script>
                 </h8>
-                <h2>There's nothing here</h2>
-                <p>Sorry, the page
-                    <span>
-                        <script>
-                            var url;
+                <div>
+                    <h2>There's nothing here</h2>
+                    <p>Sorry, the page
+                        <span>
+                            <script>
+                                var url;
 
-                            url = window.location.pathname; /* 获取文件路径（文件地址） */
-                            document.write("." + url); /* /Test/index.html */
-                        </script>
-                    </span>
-                    could not be found.
-                </p>
+                                url = window.location.pathname;
+                                document.write("." + url);
+                            </script>
+                        </span>
+                        could not be found.
+                    </p>
+                </div>
             </div>
         </span>
 </body>
