legal: Add WilliamSado

--- a/legal.html
+++ b/legal.html
@@ -272,6 +272,7 @@ We will update this privacy policy as needed so that it is current, accurate, an
                 <div>
                     <p onclick="javascript:window.location.href='https://github.com/useless-anlong'">useless-anlong</p>
                     <p onclick="javascript:window.location.href='https://github.com/wzwzx'">wzwzx</p>
+                    <p onclick="javascript:window.location.href='https://github.com/WilliamSado'">WilliamSado</p>
                 </div>
                 <div class="flex">
                     <div>
