legal: Change the Edit button link

--- a/legal.html
+++ b/legal.html
@@ -276,7 +276,7 @@ We will update this privacy policy as needed so that it is current, accurate, an
                 </div>
                 <div class="flex">
                     <div>
-                        <li onclick="javascript:window.location.href='./'">Edit at GitHub
+                        <li onclick="javascript:window.location.href='https://github.com/Variation-UI/variation-ui.github.io/blob/main/legal.html'">Edit at GitHub
                             <svg id="arrow" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="15" height="15"
                                 viewBox="-1 -1 20 20" fill="none">
