Get: Add Opkona device page and Info json files (Not Completed)

--- a/get.html
+++ b/get.html
@@ -124,7 +124,7 @@
                 </div>
                 <!-- <div class="menuHoverBar"></div> -->
             </div>
-            <div onclick="javascript:window.location.href='https://get.varia.org.cn'">
+            <div onclick="javascript:window.location.href='./get'">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
                     height="18" viewBox="-1 -1 20 20" fill="none">
                     <path id="downloadBtn"
