Redesign "Device" Page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </path>
                     </svg>
                 </div>
-                <div id="news" class="menuli">NEWS
+                <div id="get" class="menuli" onclick="javascript:window.location.href='./get'">GET
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -71,15 +71,6 @@
                     </svg>
                 </div>
                 <div id="blog" class="menuli">BLOG
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -102,9 +93,7 @@
                         <li>Sound Design</li>
                     </div>
                 </div>
-                <div id="opensource" class="menuli"
-                    onclick="javascript:window.location.href='https://github.com/variation-ui'">
-                    OPENSOURCE
+                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -113,17 +102,15 @@
                         </path>
                     </svg>
                 </div>
-                <!-- <div class="menuHoverBar"></div> -->
-            </div>
-            <div onclick="javascript:window.location.href='./downloads.html'">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
-                    height="18" viewBox="-1 -1 20 20" fill="none">
-                    <path id="downloadBtn"
-                        d="M8.20735 14.5866L8.20735 0.875L9.79175 0.875L9.79175 14.5874L15.598 9.50684C15.7423 9.38069 15.9615 9.3953 16.0879 9.53959L16.6739 10.2093C16.8003 10.3536 16.7857 10.5731 16.6413 10.6993L9.52169 16.929C9.223 17.1903 8.77701 17.1903 8.47834 16.929L1.35869 10.6993C1.21437 10.573 1.19975 10.3537 1.32603 10.2094L1.91208 9.53959C2.03835 9.39529 2.25769 9.38066 2.40203 9.50693L8.20735 14.5866Z"
-                        fill-rule="evenodd">
-                    </path>
-                </svg>
-            </div>
+                <div id="circle" class="menuli" onclick="javascript:window.location.href='https://c.varia.org.cn'">CIRCLE
+                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
+                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
+                        <path
+                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
+                            fill-rule="evenodd">
+                        </path>
+                    </svg>
+                </div>
         </header>
         <div id="intro" class="content">
             <span class="h1Box">
