--- a/markdown.html
+++ b/markdown.html
@@ -67,7 +67,15 @@
                         </path>
                     </svg>
                 </div>
-                <div id="news" class="menuli">NEWS
+                <div id="get" class="menuli" onclick="javascript:window.location.href='./get'">GET
+                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
+                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
+                        <path
+                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
+                            fill-rule="evenodd">
+                        </path>
+                    </svg>
+                </div><div id="circle" class="menuli">CIRCLE
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -77,15 +85,6 @@
                     </svg>
                 </div>
                 <div id="blog" class="menuli">BLOG
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -107,6 +106,15 @@
                         <li>UI Design</li>
                         <li>Sound Design</li>
                     </div>
+                </div>
+                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
+                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
+                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
+                        <path
+                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
+                            fill-rule="evenodd">
+                        </path>
+                    </svg>
                 </div>
                 <div id="opensource" class="menuli"
                     onclick="javascript:window.location.href='https://github.com/variation-ui'">
