--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variation UI | Introduceing your new phone</title>
+    <title>Variation UI | Here is no anything</title>
     <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/style/main.css">
     <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/style/menu.css">
     <link rel="stylesheet" type="text/css" href="https://variation-ui.github.io/style/univar.css">
@@ -174,25 +174,15 @@
                 }
             }
         }
+
+        header {
+            align-items: center;
+            justify-content: center;
+        }
     </style>
     <div id="content">
         <header>
-            <input type="checkbox" id="toggler">
-
-            <label for="toggler">
-                <svg class="menubutton" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                    width="18" height="18" viewBox="1.5 1.5 15 15" fill="none">
-                    <path class="top"
-                        d="M3.32501 5.54999L14.675 5.54999C14.8131 5.54999 14.925 5.66192 14.925 5.79999L14.925 6.74999C14.925 6.88806 14.8131 6.99999 14.675 6.99999L3.32501 6.99999C3.18694 6.99999 3.07501 6.88806 3.07501 6.74999L3.07501 5.79999C3.07501 5.66192 3.18694 5.54999 3.32501 5.54999Z"
-                        fill="#FFFFFF">
-                    </path>
-                    <path class="bottom"
-                        d="M3.32501 11L14.675 11C14.8131 11 14.925 11.1119 14.925 11.25L14.925 12.2C14.925 12.3381 14.8131 12.45 14.675 12.45L3.32501 12.45C3.18694 12.45 3.07501 12.3381 3.07501 12.2L3.07501 11.25C3.07501 11.1119 3.18694 11 3.32501 11Z"
-                        fill="#FFFFFF">
-                    </path>
-                </svg>
-            </label>
-            <div id="logo" onclick="javascript:window.location.href='./'">
+            <div id="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
                     height="18" viewBox="0 0 18 18" fill="none">
                     <path id="logoTop"
@@ -201,79 +191,6 @@
                     </path>
                     <path id="logoBottom"
                         d="M4.27684 17.6665C4.15114 17.8051 3.92604 17.8078 3.80925 17.6623L1.64512 14.9659C1.53998 14.8349 1.56387 14.6425 1.69793 14.5406L8.09451 9.61144C8.57296 9.24788 9.22154 9.20632 9.74051 9.50595L17.4668 13.9669C17.5257 14.0009 17.5009 14.0956 17.4343 14.0823C11.4364 12.7986 8.26798 13.942 4.27684 17.6665Z"
-                        fill-rule="evenodd">
-                    </path>
-                </svg>
-            </div>
-            <div class="menu">
-                <div id="about" class="menuli">ABOUT
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="news" class="menuli">NEWS
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="blog" class="menuli">BLOG
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="legal" class="menuli" onclick="javascript:window.location.href='./legal'">LEGAL
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <div id="design" class="menuli">DESIGN
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                    <div id="hoverMenuBox">
-                        <li>Font Design</li>
-                        <li>UI Design</li>
-                        <li>Sound Design</li>
-                    </div>
-                </div>
-                <div id="opensource" class="menuli"
-                    onclick="javascript:window.location.href='https://github.com/variation-ui'">
-                    OPENSOURCE
-                    <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                        width="18" height="18" viewBox="-1 -1 20 20" fill="none">
-                        <path
-                            d="M5.23551 2.39995C5.10924 2.25561 5.12121 2.03622 5.26551 1.90994L5.93551 1.32994C6.07982 1.20366 6.29922 1.21562 6.42551 1.35994L12.6555 8.47994C12.9168 8.77862 12.9168 9.22125 12.6555 9.51995L6.42551 16.64C6.29929 16.7844 6.07984 16.7964 5.93551 16.67L5.26551 16.09C5.12122 15.9636 5.10936 15.7443 5.23551 15.6L10.9155 8.99994L5.23551 2.39995Z"
-                            fill-rule="evenodd">
-                        </path>
-                    </svg>
-                </div>
-                <!-- <div class="menuHoverBar"></div> -->
-            </div>
-            <div onclick="javascript:window.location.href='./downloads.html'">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
-                    height="18" viewBox="-1 -1 20 20" fill="none">
-                    <path id="downloadBtn"
-                        d="M8.20735 14.5866L8.20735 0.875L9.79175 0.875L9.79175 14.5874L15.598 9.50684C15.7423 9.38069 15.9615 9.3953 16.0879 9.53959L16.6739 10.2093C16.8003 10.3536 16.7857 10.5731 16.6413 10.6993L9.52169 16.929C9.223 17.1903 8.77701 17.1903 8.47834 16.929L1.35869 10.6993C1.21437 10.573 1.19975 10.3537 1.32603 10.2094L1.91208 9.53959C2.03835 9.39529 2.25769 9.38066 2.40203 9.50693L8.20735 14.5866Z"
                         fill-rule="evenodd">
                     </path>
                 </svg>
